	  providing itself
	* Cudf refactoring: change name2pkgs and univ.features internal
	  structures to list ref from multi-binding hash table.
	* Cudf: add iterators on packages grouped by name
	* Cudf: allow add/remove imperative changes to universes
	  (Thanks Pietro Abate for the above 3 patches)
	* test runner: port "make test" to ocamlbuild >= 4.x

2012-08-03  Stefano Zacchiroli  <zack@upsilon.cc>
	* ALL release 0.6.3
	* Cudf: bugfix: ensure that Cudf.status sizes are non-bogus
	* Cudf: new functions to lookup properties as typed values
	  lookup_typed_{package,request,preamble}_property
	* Cudf: new functions to lookup type declarations
	  for both core and extra package properties
	* Cudf_conf: offer direct access to per-stanza property schemata
	* testsuite: add printers to better inspect test failures
	* Cudf: refactoring, build raw property access on top of typed one
	* Cudf_conf: refactoring, deduplicate "keep" property enums

2011-11-27  Stefano Zacchiroli  <zack@upsilon.cc>
	* ALL release 0.6.2
	* ALL Cudf: add a new mapping between packages and unique integer
	  identifiers, useful to avoid external uid maps (patch by Pietro
	  Abate)
	* ALL Cudf: who_provides is now more general and can query both
	  installed and available packages (patch by Pietro Abate)
	* ALL Cudf_printer: expose generic higher order printers

2011-09-15  Stefano Zacchiroli  <zack@upsilon.cc>
	* ALL release 0.6.1
	* ALL Cudf_parser: allow parsing of empty universes as well as
	  parsing of documents containing only a (possibly empty) request

2011-06-01  Stefano Zacchiroli  <zack@upsilon.cc>
	* ALL release 0.6
	* ALL cudf-check: faster (~ 2x) -dump
	* ALL Cudf_printer/Cudf_types_pp: speed improvement (~ 3.5x)
          get rid of Format, output only on strings (_types_pp) or on
          out_channel (_printer).                      [ API change ]
	* ALL Cudf_printer: add IO.output based API
	* ALL Cudf_types_pp: fix pretty printing of "enum[...]" type