@@ -1,0 +1,91 @@
+=head1 NAME
+
+cudf-check - manipulate CUDF documents
+
+
+=head1 SYNOPSIS
+
+=over
+
+=item B<cudf-check> [I<OPTION>]
+
+=back
+
+
+=head1 DESCRIPTION
+
+cudf-check is a command line tool to manipulate and validate CUDF documents.
+
+=head2 Use Cases
+
+=over
+
+=item validate a CUDF document (package universe + request):
+
+=over
+
+B<cudf-check -cudf> I<FILE>
+
+=back
+
+=item validate a CUDF document (package universe + request) and its solution
+
+=over
+
+B<cudf-check -cudf> I<FILE> B<-sol> I<FILE>
+
+=back
+
+=item validate a package universe (without user request)
+
+=over
+
+B<cudf-check -univ> I<FILE>
+
+=back
+
+=back
+
+
+=head1 OPTIONS
+
+=over 4
+
+=item -cudf
+
+parse the given CUDF (universe + request)
+
+=item -univ
+
+parse the given package universe
+
+=item -sol
+
+parse the given solution
+
+=item -dump
+
+dump results to standard output
+
+=item -help
+
+=item --help
+
+show usage information and exit
+
+=back
+
+
+=head1 SEE ALSO
+
+apt-cudf(1), update-cudf-solvers(8)
+
+
+=head1 AUTHOR
+
+Copyright: (C) 2009-2014 Stefano Zacchiroli <zack@upsilon.cc>
+
+License: GNU General Public License (GPL), version 3 or above
+
+
+=cut
